# shuup-category-organizer

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  requirements-test.txt  setup.cfg  setup.py
.tx/: config
shuup_category_organizer/: apps.py  build_resources.js  package.json  postcss.config.js  provider.py
shuup_category_organizer/admin_module/: __init__.py  views.py
shuup_category_organizer/locale/en/LC_MESSAGES/: django.po  djangojs.po
shuup_category_organizer/locale/zh_Hans/LC_MESSAGES/: django.po
shuup_category_organizer/static_src/: index.js  scripts.js  styles.scss
shuup_category_organizer/templates/shuup_category_organizer/: organize.jinja  organize_partial.jinja
shuup_category_organizer_tests/: settings.py  test_organizer.py
