[metadata]
name = shuup-category-organizer
version = 0.1.2.post+gitver
description = Shuup Category Organizer
long_description = file: README.rst
keywords = shuup,category,extra

[options]
include_package_data = True
packages = find:

[options.extras_require]
shuup = shuup>=1.7.3,<2

[options.entry_points]
shuup.addon = shuup_category_organizer = shuup_category_organizer

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,dist,venv,migrations,docs,build,doc
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_category_organizer_tests.settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[isort]
atomic=true
combine_as_imports=false
multi_line_output=5
not_skip=__init__.py
length_sort=false
line_length=79
order_by_type=false
wrap_length=79
diff=True
skip=.tox,dist,venv,migrations,docs,build
known_first_party=shuup_category_organizer
known_standard_library=token,tokenize,enum,importlib
known_third_party=
    django
    enumfields
    jsonfield
    mock
    pytest
    shuup
    six
